# nonebot-plugin-kawaii-status

./: .all-contributorsrc  .editorconfig  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/actions/setup-python/: action.yml
.github/workflows/: publish.yml  pyright.yml  ruff.yml
nonebot_plugin_kawaii_status/: __init__.py  color.py  config.py  data_source.py  drawer.py  model.py  path.py  utils.py
