[project]
name = "nonebot-plugin-kawaii-status"
version = "0.1.9"
description = "NoneBot2 服务器状态查看插件 / View server status for NoneBot2"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "KomoriDev", email = "mute231010@gmail.com" },
]
dependencies = [
    "nonebot-plugin-alconna>=0.54.0",
    "psutil>=5.9.8",
    "pillow>=10.3.0",
    "nonebot2[fastapi]>=2.2.0",
    "py-cpuinfo>=9.0.0",
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/KomoriDev/nonebot-plugin-kawaii-status"
repository = "https://github.com/KomoriDev/nonebot-plugin-kawaii-status"

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.1",
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.1",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
]

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.ruff.lint.isort]
length-sort = true
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportShadowedImports = false
disableBytesTypePromotions = true

pythonPlatform = "All"
pythonVersion = "3.9"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
